@@ -7,6 +7,7 @@ Below is a complete listing of changes for each revision of FasterCSV.
 * Added encoding support patch from Michael Reinsch.
 * Improved inspect() messages for better IRb support.
 * Fixed header writing bug reported by Dov Murik.
+* Use custom separators in parsing header Strings as suggested by Shmulik Regev.
   
 == 1.2.3
 
